--- a/WebApi.Bussiness/WebShop.Bussiness.csproj
+++ b/WebApi.Bussiness/WebShop.Bussiness.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
+    <ProjectReference Include="..\WebShop.Model\WebShop.Model.csproj" />
   </ItemGroup>
 
 </Project>
