--- a/WebShop.API/appsettings.json
+++ b/WebShop.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0LFH3T7\\SQL2022;Database=WebShop;Trusted_Connection=true;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebShop;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
 }
