[ API ] - Moving Admin Controllers to Api

--- a/WebShop.API/WebShop.API.csproj
+++ b/WebShop.API/WebShop.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebShop.DataAccess\WebShop.DataAccess.csproj" />
+    <ProjectReference Include="..\WebShop.Utility\WebShop.Utility.csproj" />
   </ItemGroup>
 
 </Project>
